made all the pages

--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,21 +1,8 @@
 <br><br>
+<!--Welcome Message-->
 <div class="container">
-  <div class="row">
-      <!--single row-->
-    <div class="col-sm-4">
-        <img src="./Assets/images/ruchit.jpg" style="width:260px; height:350px;" alt="Ruchit Patel">
-      </div>
-    <div class="col-sm-8">
-      <h3>Welcome, and thank you for taking the time to view my Portfolio.
-      The Goal of this Portfolio is to give you a deeper insight into my
-      experiences and skills I have gained in three semesters in Software
-      Engineering Technology. </h3>
-      <br>
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-      <br>
-      <h2 style="background-color:#cceeff;">I'm a great believer in luck, and I find the harder I work, the more I have of it...</h2>
-    </div>
+  <h3>Welcome, and thank you for taking the time to view my Portfolio.
+    The Goal of this Portfolio is to give you a deeper insight into my
+    experiences and skills I have gained in first three semesters in Software
+    Engineering Technology. </h3>
   </div>
-</div>
