--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,1 +1,10 @@
+/*File name: app.css
+  Ruchit Patel
+  301094664
+  6th october 2020*/
+  
 /*custom css goes here*/
+body {
+    background-image: url('/Assets/images/background.jpg');
+    background-attachment: fixed;
+}
