--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -1,1 +1,17 @@
-<p>Ruchit patel's About page</p>
+<br><br>
+<div class="container">
+  <div class="row">
+        <!--single row-->
+        <div class="col-sm-4">
+        <img src="./Assets/images/ruchit.jpg" style="width:260px; height:350px;" alt="Ruchit Patel">
+        </div>
+        <div class="col-sm-8">
+           <h3>My name is Ruchit Patel and studying at centennial college in software engineering technology.</h3>
+           <h3>I like Web application designing and working with c# language to make console based application.</h3>
+           <h3>I have started learning this program in fall 2019, and the expected time of course completion is summer 2022</h3>
+           <br>
+           <h3>Click on the below button for my resume.</h3>
+           <a href="/Assets/documents/resumeforproject.pdf"><button type="button" class="btn btn-outline-dark">Resume</button></a>
+         </div>
+  </div>
+</div>
