--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
     <!-- CSS section-->
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css'/>
     <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
-    <link rel='stylesheet' href='/Content/app.css' />
+    <link rel='stylesheet' href='./Content/app.css' />
   </head>
-
+<!--Body section goes here...-->
   <body>
