--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,1 +1,18 @@
-<p>Ruchit patel's Projects page</p>
+<br><br>
+<div class="container">
+    <!--three projects-->
+        <h2>following are my projects.<h2> 
+        <hr>
+
+        <h3>1)</h3>
+        <h3>In my first semester, I have learnt basic in html & css, and made frontend for a footwear website.</h3>
+        <a href="http://studentweb.cencol.ca/rpate613/ruchit/index.html"><button type="button" class="btn btn-outline-dark">Footwear Website</button></a>
+        
+        <h3>2)</h3>
+        <h3>In my college's assignment, I have made a survey page for college.</h3>
+        <a href="http://studentweb.cencol.ca/rpate613/webdesign/assignment_4/assignment_4.html"><button type="button" class="btn btn-outline-dark">Footwear Website</button></a>
+        
+        <h3>3)</h3>
+        <h3>In future, I would like to develop the first website with backend, as it is related to my father's business.</h3>
+</div>
+
