--- a/server/views/partials/projects.ejs
+++ b/server/views/partials/projects.ejs
@@ -4,15 +4,12 @@
         <h2>following are my projects.<h2> 
         <hr>
 
-        <h3>1)</h3>
-        <h3>In my first semester, I have learnt basic in html & css, and made frontend for a footwear website.</h3>
+        <h3>1) In my first semester, I have learnt basic in html & css, and made frontend for a footwear website.</h3>
         <a href="http://studentweb.cencol.ca/rpate613/ruchit/index.html"><button type="button" class="btn btn-outline-dark">Footwear Website</button></a>
-        
-        <h3>2)</h3>
-        <h3>In my college's assignment, I have made a survey page for college.</h3>
-        <a href="http://studentweb.cencol.ca/rpate613/webdesign/assignment_4/assignment_4.html"><button type="button" class="btn btn-outline-dark">Footwear Website</button></a>
-        
-        <h3>3)</h3>
-        <h3>In future, I would like to develop the first website with backend, as it is related to my father's business.</h3>
+        <br><br>
+        <h3>2) In my college's assignment, I have made a survey page for college.</h3>
+        <a href="http://studentweb.cencol.ca/rpate613/webdesign/assignment_4/assignment_4.html"><button type="button" class="btn btn-outline-dark"> Survey Page</button></a>
+        <br><br>
+        <h3>3) In future, I would like to develop the first website with backend, as it is related to my father's business.</h3>
 </div>
 
