--- a/server/views/contact/edit.ejs
+++ b/server/views/contact/edit.ejs
@@ -1,13 +1,18 @@
 <%- include ../partials/header.ejs %>
   
 <%- include ../partials/main_navbar.ejs%>
-
+<script>
+function upperCaseIt() {
+    var x = document.getElementById("nameTextField");
+    x.value = x.value.toLocaleUpperCase();
+}
+</script>
 <!-- Content for the Edit page-->
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
             <h1><%= title %></h1>
-            <form class="form" method="POST">
+            <form class="form" method="POST" onSubmit="upperCaseIt()">
                 <div class="form-group">
                     <label for="nameTextField">Contact Name</label>
                     <input type="text" class="form-control"
